test-cases/negative/test_118_reserved_keyword_function.lay
# negative test: using reserved keyword as function name
# expected: parser should reject this

define function return that takes nothing and returns Void
  print 'hello'


